# apps

./: .gitattributes  .gitignore  .gitmodules  README  README.md  data  generate_classification_data.py  launch_local_own.sh  main_RF.py  main_dense.py  main_own_RF.py  pom.xml  public_apps.txt  run.sh  test_compare_classifiers.py  test_compare_regressors.py  update_public.sh  utils.py
agents/: pom.xml
agents/java/: pom.xml
c/: .gitattributes  pom.xml
c/K-means/: .gitattributes  README.txt  Readme  compile.sh  kmeans-CPU-GPU.idl  kmeans-CPU.idl  queue_gpu.sh
c/cholesky/: README.txt  cholesky-functions.cc  cholesky.cc  cholesky.h  cholesky.idl  compile.sh  enqueue.sh
c/increment/: .gitignore  Readme  execution  increment-functions.cc  increment.cc  pom.xml  run.sh
c/kmeans/: README.txt  deploy  execution  kmeans-CPU.idl  kmeans-functions.cc  kmeans.cc  queue_all.sh  queue_cpu.sh
c/matmul/: deploy  execution  matmul.cc  result
c/matmul/matmul_objects/master/gsbuild/: Makefile  Makefile.am  Makefile.in  Matmul.h  autogen.sh  config.status  configure
c/matmul/matmul_objects/master/gsbuild/.deps/: Matmul-Matmul-stubs.Po  Matmul-Matmul.Po
c/matmul/matmul_objects/master/gsbuild/autom4te.cache/: output.1  requests  traces.0  traces.1
c/matmul_objects/: matmul_objects.idl
c/saxpy/: deploy  execution  run.sh  (+2 more)
c/saxpy-compss/: README  saxpy.idl
datasets/: .gitattributes  data
forest/: compss_RF_full.py  compss_RF_sklearn_subclass.py  compss_RF_sklearn_trees.py  compss_decision_tree.py
java/: pom.xml
python/: README.md  pom.xml  requirements.txt
(+3847 files in other folders)
